[workspace]
members = [
    "node",
    "runtime",
    "pallets/primitives",
    "pallets/token",
    "pallets/wrap",
    "pallets/dex",
    "pallets/tao",
    "pallets/cdp",
    "pallets/valley",
    "pallets/commodity",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
