[workspace]
members = [
    "node",
    "runtime",
    "pallets/primitives",
    "pallets/token",
    "pallets/wrap",
    "pallets/dex",
    "pallets/cdp",
    "pallets/valley",
    "pallets/commodity",
    "pallets/tao",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
