[package]
name = "parachain-spruce"
version = "2.0.1"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
build = "build.rs"

[[bin]]
name = "parachain-spruce"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.8.1", features = ["wasmtime"] }
sp-core = { version = "2.0.1" }
sc-executor = { version = "0.8.1", features = ["wasmtime"] }
sc-service = { version = "0.8.1", features = ["wasmtime"] }
sp-inherents = { version = "2.0.1" }
sc-transaction-pool = { version = "2.0.1" }
sp-transaction-pool = { version = "2.0.1" }
sc-consensus-aura = { version = "0.8.1" }
sp-consensus-aura = { version = "0.8.1" }
sp-consensus = { version = "0.8.1" }
sc-consensus = { version = "0.8.1" }
sc-finality-grandpa = { version = "0.8.1" }
sp-finality-grandpa = { version = "2.0.1" }
sc-client-api = { version = "2.0.1" }
sp-runtime = { version = "2.0.1" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "2.0.1" }
sp-api = { version = "2.0.1" }
sc-rpc-api = { version = "0.8.1" }
sp-blockchain = { version = "2.0.1" }
sp-block-builder = { version = "2.0.1" }
sc-basic-authorship = { version = "0.8.1" }
substrate-frame-rpc-system = { version = "2.0.1" }
pallet-transaction-payment-rpc = { version = "2.0.1" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "2.0.1" }
frame-benchmarking-cli = { version = "2.0.1" }

spruce-runtime = { version = "0.0.1", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.1" }

[features]
default = []
runtime-benchmarks = [
	"spruce-runtime/runtime-benchmarks",
]
