[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-commodity'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }

primitives = { package = "pallet-primitives", path = "../primitives", default-features = false }
token = { package = "pallet-token", path = "../token", default-features = false }
currency = { package = "pallet-currency", path = "../currency", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-timestamp/std',
    'primitives/std',
    'token/std',
    'currency/std',
]
