[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-dex'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
integer-sqrt = "0.1.2"
frame-support = { version = "2.0.0-rc4", default-features = false }
frame-system = { version = "2.0.0-rc4", default-features = false }
sp-std = { version = "2.0.0-rc4", default-features = false }
sp-io = { version = "2.0.0-rc4", default-features = false }
sp-runtime = { version = "2.0.0-rc4", default-features = false }
pallet-timestamp = { version = "2.0.0-rc4", default-features = false }

token = { package = "pallet-token", path = "../token", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-rc4", default-features = false }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'sp-runtime/std',
    'pallet-timestamp/std',
    'token/std'
]
