[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-nft'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }

token = { package = "pallet-token", path = "../token", default-features = false }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'sp-core/std',
    'token/std',
]
