[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-primitives'
version = '0.1.0'

[dependencies]
serde = { version = "1.0.102", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
sp-runtime = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }

[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-core/std",
]
