[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-tao'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
pallet-timestamp = { version = "2.0.1", default-features = false }

token = { package = "pallet-token", path = "../token", default-features = false }
# valley = { package = "pallet-valley", path = "../valley", default-features = false }
# commodity = { package = "pallet-commodity", path = "../commodity", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.1", default-features = false }


[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-io/std',
	'sp-runtime/std',
	'pallet-timestamp/std',
	'token/std',
	# 'valley/std',
	# 'commodity/std',
]
